@@ -1,4 +1,11 @@
 
+Slick 7.x-2.0-dev, 2015-9-08
+----------------------------
+- Added a configurable option using slick_ui.module to toggle slick admin css
+  which can be accessed at: admin/config/media/slick/ui
+- #2553385 by gausarts, xtfer: Slick CSS admin compatibility with contrib admin
+  themes.
+
 Slick 7.x-2.0-dev, 2015-9-07
 ----------------------------
 - Made slick admin css optional. Execute the following anywhere once to disable
